--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,10 +1,10 @@
 {
-    "printWidth": 80,
+    "printWidth": 120,
     "tabWidth": 2,
     "useTabs": false,
     "semi": false,
     "singleQuote": true,
-    "trailingComma": "none",
+    "trailingComma": "es5",
     "bracketSpacing": false,
     "arrowParens": "avoid",
     "parser": "typescript"
