--- a/action.yml
+++ b/action.yml
@@ -1,10 +1,11 @@
-name: 'Your name here'
-description: 'Provide a description here'
-author: 'Your name or organization here'
+name: 'arm-none-eabi-gcc'
+description: 'Set up arm-none-eabi-gcc and add it to the PATH'
+author: 'Alberto Garcia Hierro <alberto@garciahierro.com>'
 inputs:
-  myInput:              # change this
-    description: 'input description here'
-    default: 'default value if applicable'
+  release:
+    description: 'GNU Embedded Toolchain for Arm release name, in the V-YYYY-qZ format (e.g. "9-2019-q4")'
+  directory:
+    description: 'Directory to unpack GCC to. Defaults to a temporary directory.'
 runs:
   using: 'node12'
   main: 'dist/index.js'
