--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint src/**/*.ts",
     "pack": "ncc build",
     "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run pack && npm test"
+    "all": "npm run build && npm run format-check && npm run lint && npm run pack && npm test"
   },
   "repository": {
     "type": "git",
@@ -25,11 +25,20 @@
   "author": "YourNameOrOrganization",
   "license": "MIT",
   "dependencies": {
-    "@actions/core": "^1.2.0"
+    "@actions/core": "^1.2.0",
+    "@types/node-fetch": "^2.5.4",
+    "@types/tar": "^4.0.3",
+    "@types/tmp": "^0.1.0",
+    "@types/unzipper": "^0.10.2",
+    "node-fetch": "^2.6.0",
+    "tar": "^6.0.1",
+    "tmp": "^0.1.0",
+    "unbzip2-stream": "^1.3.3",
+    "unzipper": "^0.10.9"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
-    "@types/node": "^12.7.12",
+    "@types/node": "^12.12.28",
     "@typescript-eslint/parser": "^2.8.0",
     "@zeit/ncc": "^0.20.5",
     "eslint": "^5.16.0",
