CI: Test all GCC releases we support
This is likely to bring up failures, since the directory structure
has changed a bit over the years

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,11 +18,39 @@ jobs:
       fail-fast: false
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
-    name: Test @ ${{ matrix.os }}
+        release:
+          - '9-2020-q2'
+          - '9-2019-q4'
+          - '8-2019-q3'
+          - '8-2018-q4'
+          - '7-2018-q2'
+          - '7-2017-q4'
+          - '6-2017-q2'
+          - '6-2017-q1'
+          - '6-2016-q4'
+          - '5-2016-q3'
+          - '5-2016-q2'
+          - '5-2016-q1'
+          - '5-2015-q4'
+          - '4.9-2015-q3'
+          - '4.9-2015-q2'
+          - '4.9-2015-q1'
+          - '4.9-2014-q4'
+          - '4.8-2014-q3'
+          - '4.8-2014-q2'
+          - '4.8-2014-q1'
+          - '4.7-2014-q2'
+          - '4.8-2013-q4'
+          - '4.7-2013-q3'
+          - '4.7-2013-q2'
+          - '4.7-2013-q1'
+          - '4.7-2012-q4'
+
+    name: Test ${{ matrix.release }} @ ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v2
     - uses: ./
       with: 
-        release: 9-2020-q2
+        release: ${{ matrix.release }}
     - run: arm-none-eabi-gcc -v
