--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
+  "name": "arm-none-eabi-gcc",
+  "version": "1.0.2",
   "private": true,
-  "description": "TypeScript template action",
+  "description": "Action for installing arm-none-eabi-gcc",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -44,11 +44,11 @@
     "eslint": "^5.16.0",
     "eslint-plugin-github": "^2.0.0",
     "eslint-plugin-jest": "^22.21.0",
-    "jest": "^24.9.0",
-    "jest-circus": "^24.9.0",
+    "jest": "^26.6.3",
+    "jest-circus": "^26.6.3",
     "js-yaml": "^3.13.1",
     "prettier": "^1.19.1",
     "ts-jest": "^26.4.4",
-    "typescript": "^3.6.4"
+    "typescript": "^4.1.3"
   }
 }
