--- a/package.json
+++ b/package.json
@@ -27,19 +27,15 @@
   "license": "MIT",
   "dependencies": {
     "@actions/core": "^1.2.6",
-    "@types/node-fetch": "^2.5.4",
-    "@types/tar": "^4.0.3",
+    "@actions/tool-cache": "^1.7.1",
     "@types/tmp": "^0.1.0",
-    "@types/unzipper": "^0.10.2",
-    "node-fetch": "^2.6.1",
-    "tar": "^6.0.1",
-    "tmp": "^0.1.0",
-    "unbzip2-stream": "^1.3.3",
-    "unzipper": "^0.10.9"
+    "tmp": "^0.1.0"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "@types/node": "^12.12.28",
+    "@types/node-fetch": "^2.5.4",
+    "@types/rimraf": "^3.0.2",
     "@typescript-eslint/parser": "^2.8.0",
     "@zeit/ncc": "^0.20.5",
     "eslint": "^5.16.0",
@@ -48,7 +44,9 @@
     "jest": "^26.6.3",
     "jest-circus": "^26.6.3",
     "js-yaml": "^3.13.1",
+    "node-fetch": "^2.6.1",
     "prettier": "^1.19.1",
+    "rimraf": "^3.0.2",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
