--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc",
     "format": "prettier --write **/*.ts",
     "format-check": "prettier --check **/*.ts",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint -c config/eslintrc.json src/**/*.ts",
     "pack": "ncc build",
     "test": "jest",
     "all": "npm run build && npm run format-check && npm run lint && npm run pack && npm test"
