Project: Move prettier configuration file into config folder.

--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write **/*.ts",
-    "format-check": "prettier --check **/*.ts",
-    "lint": "eslint -c config/eslintrc.json src/**/*.ts",
+    "format": "prettier --config config/prettierrc.json --write **/*.ts",
+    "format-check": "prettier --config config/prettierrc.json --check **/*.ts",
+    "lint": "eslint --config config/eslintrc.json src/**/*.ts",
     "pack": "ncc build",
     "test": "jest",
     "all": "npm run build && npm run format-check && npm run lint && npm run pack && npm test"
