--- a/package.json
+++ b/package.json
@@ -29,13 +29,15 @@
     "@actions/core": "^1.6.0",
     "@actions/tool-cache": "^1.7.1",
     "@types/tmp": "^0.1.0",
-    "md5-file": "^5.0.0"
+    "md5-file": "^5.0.0",
+    "semver": "^7.3.5"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
     "@types/node": "^16.11.6",
     "@types/node-fetch": "^2.5.4",
     "@types/rimraf": "^3.0.2",
+    "@types/semver": "^7.3.9",
     "@typescript-eslint/parser": "^2.8.0",
     "@zeit/ncc": "^0.20.5",
     "eslint": "^5.16.0",
