Action: Add global cache between runs.
The cache added before only stays during a single run :/

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -68,6 +68,10 @@ jobs:
       uses: ./
       with:
         release: ${{ matrix.release }}
+    - name: Set up GCC Arm Compiler (2)
+      uses: ./
+      with:
+        release: ${{ matrix.release }}
     - name: Print out programs invoked by the compiler
       run: arm-none-eabi-gcc -v
     - name: Print out version
