--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "author": "Carlos Pereira Atencio",
   "license": "MIT",
   "dependencies": {
+    "@actions/cache": "^1.0.7",
     "@actions/core": "^1.6.0",
     "@actions/tool-cache": "^1.7.1",
     "@types/tmp": "^0.1.0",
