--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^7.3.9",
     "@typescript-eslint/parser": "^5.2.0",
-    "@zeit/ncc": "^0.20.5",
+    "@vercel/ncc": "^0.31.1",
     "eslint": "^8.1.0",
     "eslint-plugin-github": "^4.3.3",
     "eslint-plugin-jest": "^25.2.2",
