--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "format": "prettier --config config/prettierrc.json --write **/*.ts",
     "format-check": "prettier --config config/prettierrc.json --check **/*.ts",
     "lint": "eslint --config config/eslintrc.json src/**/*.ts",
-    "pack": "ncc build",
+    "package": "ncc build --source-map --license licenses.txt",
     "test": "jest --config config/jest.config.js",
-    "all": "npm run build && npm run format-check && npm run lint && npm run pack && npm test"
+    "all": "npm run build && npm run format-check && npm run lint && npm run package && npm test"
   },
   "repository": {
     "type": "git",
