--- a/action.yml
+++ b/action.yml
@@ -4,6 +4,7 @@ author: 'Carlos Pereira Atencio'
 inputs:
   release:
     description: 'GNU Embedded Toolchain for Arm release name (e.g. "10.3-2021.07").'
+    required: false
 runs:
   using: 'node12'
   main: 'dist/index.js'
