--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -78,6 +78,29 @@ jobs:
         && !contains(matrix.release, '2015') && !contains(matrix.release, '2016') && (matrix.release != 'latest'))
       run: arm-none-eabi-gcc --version | grep -q ${{ matrix.release }}
 
+  # Check Action env var path
+  test-default:
+    name: Test path output and env var
+    runs-on: windows-2016
+    steps:
+    - uses: actions/checkout@v2
+    - name: Ensure the compiler is not present
+      run: '! arm-none-eabi-gcc --version'
+    - name: Set up GCC Arm Compiler with default options
+      uses: ./
+        release: '7-2017-q4'
+        path-env-var: ARM_NONE_EABI_GCC_PATH
+    - name: Print out version
+      run: arm-none-eabi-gcc --version
+    - name: Check the version matches
+      run: arm-none-eabi-gcc --version | grep -q 7-2017-q4
+    - name: Print path via env var and output
+      run: echo "output ${{ steps.action-under-test-id.outputs.path }} \n env var $ARM_NONE_EABI_GCC_PATH"
+    - name: Check output path is correct
+      run: echo "Path ${{ steps.action-under-test-id.outputs.path }}" | grep -q C:\Users\runneradmin\gcc-arm-none-eabi-7.2017.4-win32\bin
+    - name: Check env var path is correct
+      run: echo "Path $ARM_NONE_EABI_GCC_PATH" | grep -q C:\Users\runneradmin\gcc-arm-none-eabi-7.2017.4-win32\bin
+
   # Run Action without inputs
   test-default:
     name: Test default options
