--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         release:
           - 'latest'
+          - '11.3.Rel1'
           - '11.2-2022.02'
           - '10.3-2021.10'
           - '10.3-2021.07'
@@ -128,6 +129,6 @@ jobs:
     - name: Print out version
       run: arm-none-eabi-gcc --version
     - name: Check the version matches
-      run: arm-none-eabi-gcc --version | grep -q 11.2-2022.02
+      run: arm-none-eabi-gcc --version | grep -q 11.3.Rel1
     - name: Check output path is correct
-      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-11.2.202202-linux/gcc-arm-11.2-2022.02-x86_64-arm-none-eabi/bin
+      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-11.3.1-linux/arm-gnu-toolchain-11.3.rel1-x86_64-arm-none-eabi/bin
