Tests/CI: Add tests to check all URLs work, and check every day.

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint --config config/eslintrc.json src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest --config config/jest.config.js",
+    "test:urls": "jest --config config/jest.config.js -t \"Check links work\"",
     "all": "npm run build && npm run format-check && npm run lint && npm run package && npm test"
   },
   "repository": {
