--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -26,6 +26,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         release:
           - 'latest'
+          - '12.2.Rel1'
           - '11.3.Rel1'
           - '11.2-2022.02'
           - '10.3-2021.10'
@@ -73,8 +74,9 @@ jobs:
       run: arm-none-eabi-gcc --version
     - name: Check the version matches
       if: |
-        (!contains(matrix.release, '2012') && !contains(matrix.release, '2013') && !contains(matrix.release, '2014')
-        && !contains(matrix.release, '2015') && !contains(matrix.release, '2016') && (matrix.release != 'latest'))
+        (!contains(matrix.release, '2013') && !contains(matrix.release, '2014')
+         && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
+         && (matrix.release != 'latest'))
       run: arm-none-eabi-gcc --version | grep -q ${{ matrix.release }}
     - name: Clone STM32 project
       uses: actions/checkout@v3
@@ -125,6 +127,6 @@ jobs:
     - name: Print out version
       run: arm-none-eabi-gcc --version
     - name: Check the version matches
-      run: arm-none-eabi-gcc --version | grep -q 11.3.Rel1
+      run: arm-none-eabi-gcc --version | grep -q 12.2.Rel1
     - name: Check output path is correct
-      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-11.3.1-linux/arm-gnu-toolchain-11.3.rel1-x86_64-arm-none-eabi/bin
+      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-12.2.1-linux/arm-gnu-toolchain-12.2.rel1-x86_64-arm-none-eabi/bin
