Action: Fix insensitive grep location

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -134,6 +134,6 @@ jobs:
     - name: Print out version
       run: arm-none-eabi-gcc --version
     - name: Check the version matches
-      run: arm-none-eabi-gcc --version | grep -q 13.2.Rel1
+      run: arm-none-eabi-gcc --version | grep -qi 13.2.Rel1
     - name: Check output path is correct
-      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -qi /home/runner/gcc-arm-none-eabi-13.2.1-linux/arm-gnu-toolchain-13.2.rel1-x86_64-arm-none-eabi/bin
+      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-13.2.1-linux/arm-gnu-toolchain-13.2.rel1-x86_64-arm-none-eabi/bin
