--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,6 +31,7 @@ jobs:
         os: [ubuntu-latest, macos-latest, windows-latest]
         release:
           - 'latest'
+          - '13.2.Rel1'
           - '12.3.Rel1'
           - '12.2.Rel1'
           - '11.3.Rel1'
@@ -83,7 +84,7 @@ jobs:
         (!contains(matrix.release, '2013') && !contains(matrix.release, '2014')
          && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
          && (matrix.release != 'latest'))
-      run: arm-none-eabi-gcc --version | grep -q ${{ matrix.release }}
+      run: arm-none-eabi-gcc --version | grep -qi ${{ matrix.release }}
     - name: Clone STM32 project
       uses: actions/checkout@v3
       with:
@@ -133,6 +134,6 @@ jobs:
     - name: Print out version
       run: arm-none-eabi-gcc --version
     - name: Check the version matches
-      run: arm-none-eabi-gcc --version | grep -q 12.3.Rel1
+      run: arm-none-eabi-gcc --version | grep -qi 13.2.Rel1
     - name: Check output path is correct
-      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-12.3.1-linux/arm-gnu-toolchain-12.3.rel1-x86_64-arm-none-eabi/bin
+      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-13.2.1-linux/arm-gnu-toolchain-13.2.Rel1-x86_64-arm-none-eabi/bin
