--- a/.github/workflows/test-all-releases.yml
+++ b/.github/workflows/test-all-releases.yml
@@ -15,7 +15,8 @@ jobs:
       fail-fast: false
       matrix:
         # self-hosted-linux-arm64 is a self hosted runner configured in this repo
-        os: [ubuntu-latest, macos-latest, windows-latest, self-hosted-linux-arm64]
+        # macOS 12 runner is x86_64 and macOS 14 runner is arm64
+        os: [ubuntu-latest, macos-12, macos-14, windows-latest, self-hosted-linux-arm64]
         release:
           - 'latest'
           - '13.2.Rel1'
@@ -52,6 +53,68 @@ jobs:
           - '4.7-2013-q2'
           - '4.7-2013-q1'
         exclude:
+          # macOS 14 runner is arm64 and is only available from 12.2.Rel1
+          - os: macos-14
+            release: '11.3.Rel1'
+          - os: macos-14
+            release: '11.2-2022.02'
+          - os: macos-14
+            release: '10.3-2021.10'
+          - os: macos-14
+            release: '10.3-2021.07'
+          - os: macos-14
+            release: '10-2020-q4'
+          - os: macos-14
+            release: '9-2020-q2'
+          - os: macos-14
+            release: '9-2019-q4'
+          - os: macos-14
+            release: '8-2019-q3'
+          - os: macos-14
+            release: '8-2018-q4'
+          - os: macos-14
+            release: '7-2018-q2'
+          - os: macos-14
+            release: '7-2017-q4'
+          - os: macos-14
+            release: '6-2017-q2'
+          - os: macos-14
+            release: '6-2017-q1'
+          - os: macos-14
+            release: '6-2016-q4'
+          - os: macos-14
+            release: '5-2016-q3'
+          - os: macos-14
+            release: '5-2016-q2'
+          - os: macos-14
+            release: '5-2016-q1'
+          - os: macos-14
+            release: '5-2015-q4'
+          - os: macos-14
+            release: '4.9-2015-q3'
+          - os: macos-14
+            release: '4.9-2015-q2'
+          - os: macos-14
+            release: '4.9-2015-q1'
+          - os: macos-14
+            release: '4.9-2014-q4'
+          - os: macos-14
+            release: '4.8-2014-q3'
+          - os: macos-14
+            release: '4.8-2014-q2'
+          - os: macos-14
+            release: '4.8-2014-q1'
+          - os: macos-14
+            release: '4.7-2014-q2'
+          - os: macos-14
+            release: '4.8-2013-q4'
+          - os: macos-14
+            release: '4.7-2013-q3'
+          - os: macos-14
+            release: '4.7-2013-q2'
+          - os: macos-14
+            release: '4.7-2013-q1'
+          # Linux arm64 is only available from 9-2019-q4
           - os: self-hosted-linux-arm64
             release: '8-2019-q3'
           - os: self-hosted-linux-arm64
@@ -98,7 +161,7 @@ jobs:
             release: '4.7-2013-q2'
           - os: self-hosted-linux-arm64
             release: '4.7-2013-q1'
-    name: Test ${{ matrix.release }} @ ${{ matrix.os }}
+    name: ${{ matrix.release }} @ ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
