--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,7 +28,8 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        # self-hosted-linux-arm64 is a self hosted runner configured in this repo
+        os: [ubuntu-latest, macos-latest, windows-latest, self-hosted-linux-arm64]
         release:
           - 'latest'
           - '13.2.Rel1'
@@ -64,65 +65,82 @@ jobs:
           - '4.7-2013-q3'
           - '4.7-2013-q2'
           - '4.7-2013-q1'
+        exclude:
+          - os: self-hosted-linux-arm64
+            release: '8-2019-q3'
+          - os: self-hosted-linux-arm64
+            release: '8-2018-q4'
+          - os: self-hosted-linux-arm64
+            release: '7-2018-q2'
+          - os: self-hosted-linux-arm64
+            release: '7-2017-q4'
+          - os: self-hosted-linux-arm64
+            release: '6-2017-q2'
+          - os: self-hosted-linux-arm64
+            release: '6-2017-q1'
+          - os: self-hosted-linux-arm64
+            release: '6-2016-q4'
+          - os: self-hosted-linux-arm64
+            release: '5-2016-q3'
+          - os: self-hosted-linux-arm64
+            release: '5-2016-q2'
+          - os: self-hosted-linux-arm64
+            release: '5-2016-q1'
+          - os: self-hosted-linux-arm64
+            release: '5-2015-q4'
+          - os: self-hosted-linux-arm64
+            release: '4.9-2015-q3'
+          - os: self-hosted-linux-arm64
+            release: '4.9-2015-q2'
+          - os: self-hosted-linux-arm64
+            release: '4.9-2015-q1'
+          - os: self-hosted-linux-arm64
+            release: '4.9-2014-q4'
+          - os: self-hosted-linux-arm64
+            release: '4.8-2014-q3'
+          - os: self-hosted-linux-arm64
+            release: '4.8-2014-q2'
+          - os: self-hosted-linux-arm64
+            release: '4.8-2014-q1'
+          - os: self-hosted-linux-arm64
+            release: '4.7-2014-q2'
+          - os: self-hosted-linux-arm64
+            release: '4.8-2013-q4'
+          - os: self-hosted-linux-arm64
+            release: '4.7-2013-q3'
+          - os: self-hosted-linux-arm64
+            release: '4.7-2013-q2'
+          - os: self-hosted-linux-arm64
+            release: '4.7-2013-q1'
     name: Test ${{ matrix.release }} @ ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     steps:
     - uses: actions/checkout@v4
+    # - run: node -e "console.log(process.platform, process.arch)"
     - name: Ensure the compiler is not present (Unix)
       if: runner.os != 'Windows'
       run: '! arm-none-eabi-gcc --version'
     - name: Set up GCC Arm Compiler
-      if: |
-        (runner.arch == 'X86' || runner.arch == 'X64') ||
-        (runner.arch == 'ARM64' && !contains(matrix.release, '2013') && !contains(matrix.release, '2014')
-        && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
-        && !contains(matrix.release, '2017') && !contains(matrix.release, '2018')
-        && (matrix.release != '8-2019-q3'))
       uses: ./
       with:
         release: ${{ matrix.release }}
     - name: Print out programs invoked by the compiler
-      if: |
-        (runner.arch == 'X86' || runner.arch == 'X64') ||
-        (runner.arch == 'ARM64' && !contains(matrix.release, '2013') && !contains(matrix.release, '2014')
-        && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
-        && !contains(matrix.release, '2017') && !contains(matrix.release, '2018')
-        && (matrix.release != '8-2019-q3'))
       run: arm-none-eabi-gcc -v
     - name: Print out version
-      if: |
-        (runner.arch == 'X86' || runner.arch == 'X64') ||
-        (runner.arch == 'ARM64' && !contains(matrix.release, '2013') && !contains(matrix.release, '2014')
-        && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
-        && !contains(matrix.release, '2017') && !contains(matrix.release, '2018')
-        && (matrix.release != '8-2019-q3'))
       run: arm-none-eabi-gcc --version
     - name: Check the version matches
       if: |
-        (runner.arch == 'X86' || runner.arch == 'X64') &&
         (!contains(matrix.release, '2013') && !contains(matrix.release, '2014')
          && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
          && (matrix.release != 'latest'))
       run: arm-none-eabi-gcc --version | grep -qi ${{ matrix.release }}
     - name: Clone STM32 project
-      if: |
-        (runner.arch == 'X86' || runner.arch == 'X64') ||
-        (runner.arch == 'ARM64' && !contains(matrix.release, '2013') && !contains(matrix.release, '2014')
-        && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
-        && !contains(matrix.release, '2017') && !contains(matrix.release, '2018')
-        && (matrix.release != '8-2019-q3'))
       uses: actions/checkout@v4
       with:
         repository: 'trebisky/stm32f103'
         ref: 7cfe5feaf02c653352331374d2ad178eb04efde7
         path: 'stm32f103/'
     - name: Build simple blinky project
-      if: |
-        (runner.arch == 'X86' || runner.arch == 'X64') ||
-        (runner.arch == 'ARM64' && !contains(matrix.release, '2013') && !contains(matrix.release, '2014')
-        && !contains(matrix.release, '2015') && !contains(matrix.release, '2016')
-        && !contains(matrix.release, '2017') && !contains(matrix.release, '2018')
-        && (matrix.release != '8-2019-q3'))
       working-directory: ./stm32f103/blink1/
       run: make all
 
