--- a/.github/workflows/test-all-releases.yml
+++ b/.github/workflows/test-all-releases.yml
@@ -15,10 +15,11 @@ jobs:
       fail-fast: false
       matrix:
         # self-hosted-linux-arm64 is a self hosted runner configured in this repo
-        # macOS 12 runner is x86_64 and macOS 14 runner is arm64
-        os: [ubuntu-latest, macos-12, macos-14, windows-latest, self-hosted-linux-arm64]
+        # macOS 13 runner is x86_64 and macOS 14 runner is arm64
+        os: [ubuntu-latest, macos-13, macos-14, windows-latest, self-hosted-linux-arm64]
         release:
           - 'latest'
+          - '14.2.Rel1'
           - '13.3.Rel1'
           - '13.2.Rel1'
           - '12.3.Rel1'
