--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,9 +2,9 @@ name: Build & Test Action
 
 on:
   push:
-    branches: '*'
+    branches: "*"
   pull_request:
-    branches: '*'
+    branches: "*"
 
 jobs:
   # Test and check build errors
@@ -12,54 +12,54 @@ jobs:
     name: Run tests and build Action
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - run: npm install
-    - run: npm run all
-    - name: Run action to check no exceptions are thrown
-      uses: ./
-      with:
-        release: '10.3-2021.07'
-        path-env-var: ARM_NONE_EABI_GCC_PATH
+      - uses: actions/checkout@v4
+      - run: npm install
+      - run: npm run all
+      - name: Run action to check no exceptions are thrown
+        uses: ./
+        with:
+          release: "13.3.Rel1"
+          path-env-var: AARCH64_NONE_ELF_GCC_PATH
 
   # Check Action env var path
   test-exports:
     name: Test path output and env var
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v4
-    - name: Ensure the compiler is not present
-      run: '! arm-none-eabi-gcc --version'
-    - name: Set up GCC Arm Compiler with environmental variable
-      id: action-under-test-id
-      uses: ./
-      with:
-        release: '7-2017-q4'
-        path-env-var: ARM_NONE_EABI_GCC_PATH
-    - name: Print out version
-      run: arm-none-eabi-gcc --version
-    - name: Check the version matches
-      run: arm-none-eabi-gcc --version | grep -q 7-2017-q4
-    - name: Print path via env var and output
-      run: echo "output -> ${{ steps.action-under-test-id.outputs.path }} \n env var -> $ARM_NONE_EABI_GCC_PATH"
-    - name: Check env var path is correct
-      run: echo "Path $ARM_NONE_EABI_GCC_PATH" | grep -q /home/runner/gcc-arm-none-eabi-7.2017.4-linux-x64/gcc-arm-none-eabi-7-2017-q4-major/bin
-    - name: Check output path is correct
-      run: echo "Path ${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-7.2017.4-linux-x64/gcc-arm-none-eabi-7-2017-q4-major/bin
+      - uses: actions/checkout@v4
+      - name: Ensure the compiler is not present
+        run: "! aarch64-none-elf-gcc --version"
+      - name: Set up GCC Arm64 Compiler with environmental variable
+        id: action-under-test-id
+        uses: ./
+        with:
+          release: "13.3.Rel1"
+          path-env-var: AARCH64_NONE_ELF_GCC_PATH
+      - name: Print out version
+        run: aarch64-none-elf-gcc --version
+      - name: Check the version matches
+        run: aarch64-none-elf-gcc --version | grep -q 13.3.Rel1
+      - name: Print path via env var and output
+        run: echo "output -> ${{ steps.action-under-test-id.outputs.path }} \n env var -> $AARCH64_NONE_ELF_GCC_PATH"
+      - name: Check env var path is correct
+        run: echo "Path $AARCH64_NONE_ELF_GCC_PATH" | grep -q /home/runner/arm-gnu-toolchain-13.3.rel1-x86_64-aarch64-none-elf/aarch64-none-elf/bin
+      - name: Check output path is correct
+        run: echo "Path ${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/arm-gnu-toolchain-13.3.rel1-x86_64-aarch64-none-elf/aarch64-none-elf/bin
 
   # Run Action without inputs
   test-default:
     name: Test default options
     runs-on: ubuntu-22.04
     steps:
-    - uses: actions/checkout@v4
-    - name: Ensure the compiler is not present
-      run: '! arm-none-eabi-gcc --version'
-    - name: Set up GCC Arm Compiler with default options
-      uses: ./
-      id: action-under-test-id
-    - name: Print out version
-      run: arm-none-eabi-gcc --version
-    - name: Check the version matches
-      run: arm-none-eabi-gcc --version | grep -qi 14.2.Rel1
-    - name: Check output path is correct
-      run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-arm-none-eabi-14.2.1-linux-x64/arm-gnu-toolchain-14.2.rel1-x86_64-arm-none-eabi/bin
+      - uses: actions/checkout@v4
+      - name: Ensure the compiler is not present
+        run: "! aarch64-none-elf-gcc --version"
+      - name: Set up GCC Arm64 Compiler with default options
+        uses: ./
+        id: action-under-test-id
+      - name: Print out version
+        run: aarch64-none-elf-gcc --version
+      - name: Check the version matches
+        run: aarch64-none-elf-gcc --version | grep -qi 14.3.Rel1
+      - name: Check output path is correct
+        run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/arm-gnu-toolchain-14.3.rel1-x86_64-aarch64-none-elf/aarch64-none-elf/bin
