--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "arm-none-eabi-gcc-action",
+  "name": "aarch64-none-elf-gcc-action",
   "version": "1.10.1",
   "private": true,
-  "description": "GitHub Action to install arm-none-eabi-gcc",
+  "description": "GitHub Action to install aarch64-none-elf-gcc",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
@@ -16,37 +16,40 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/carlosperate/arm-none-eabi-gcc-action.git"
+    "url": "git+https://github.com/lawkai-vivo/aarch64-none-elf-gcc-action.git"
   },
   "keywords": [
     "actions",
     "gcc",
     "arm",
-    "arm-none-eabi-gcc"
+    "aarch64-none-elf-gcc"
   ],
-  "author": "Carlos Pereira Atencio",
+  "author": "Kai Law",
   "license": "MIT",
   "dependencies": {
     "@actions/cache": "^4.0.3",
     "@actions/core": "^1.10.1",
     "@actions/tool-cache": "^2.0.1",
     "md5-file": "^5.0.0",
-    "semver": "^7.5.2"
+    "semver": "^7.5.2",
+    "sha256-file": "^1.0.0"
   },
   "devDependencies": {
+    "@types/axios": "^0.9.36",
     "@types/jest": "^29.2.0",
-    "@types/node": "^18.11.2",
+    "@types/node": "^18.19.121",
     "@types/rimraf": "^3.0.2",
     "@types/semver": "^7.3.12",
+    "@types/sha256-file": "^1.0.3",
     "@typescript-eslint/parser": "^5.40.1",
     "@vercel/ncc": "^0.34.0",
     "eslint": "^8.6.0",
     "eslint-plugin-github": "^4.3.7",
     "eslint-plugin-jest": "^27.1.3",
     "jest": "^29.2.1",
-    "prettier": "^2.2.1",
+    "prettier": "^2.8.8",
     "rimraf": "^3.0.2",
     "ts-jest": "^29.0.3",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.5"
   }
 }
