--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@actions/cache": "^4.0.3",
     "@actions/core": "^1.10.1",
     "@actions/tool-cache": "^2.0.1",
+    "axios": "^1.11.0",
     "md5-file": "^5.0.0",
     "semver": "^7.5.2",
     "sha256-file": "^1.0.0"
