--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -62,4 +62,4 @@ jobs:
       - name: Check the version matches
         run: aarch64-none-elf-gcc --version | grep -qi 14.2.Rel1
       - name: Check output path is correct
-        run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/arm-gnu-toolchain-14.3.rel1-x86_64-aarch64-none-elf/aarch64-none-elf/bin
+        run: echo "${{ steps.action-under-test-id.outputs.path }}" | grep -q /home/runner/gcc-aarch64-none-elf-14.2.1-linux-x64/arm-gnu-toolchain-14.2.rel1-x86_64-aarch64-none-elf/bin
