--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --config config/eslintrc.json src/**/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest --config config/jest.config.js",
-    "test:urls": "jest --config config/jest.config.js -t \"Check links work\"",
+    "test:urls": "jest --config config/jest.cionly.config.js",
     "all": "npm run build && npm run format-check && npm run lint && npm run package && npm test"
   },
   "repository": {
@@ -27,6 +27,7 @@
   "author": "Carlos Pereira Atencio",
   "license": "MIT",
   "dependencies": {
+    "@actions/http-client": "^2.2.1",
     "@actions/cache": "^4.0.3",
     "@actions/core": "^1.10.1",
     "@actions/tool-cache": "^2.0.1",
