--- a/.github/workflows/test-all-releases.yml
+++ b/.github/workflows/test-all-releases.yml
@@ -18,6 +18,7 @@ jobs:
         os: [ubuntu-22.04, ubuntu-22.04-arm, macos-15-intel, macos-14, windows-latest]
         release:
           - 'latest'
+          - '15.2.Rel1'
           - '14.3.Rel1'
           - '14.2.Rel1'
           - '13.3.Rel1'
@@ -58,6 +59,8 @@ jobs:
           # macOS 13 is x86_64 and only has releases until 14.2.Rel1
           - os: macos-15-intel
             release: 'latest'
+          - os: macos-15-intel
+            release: '15.2.Rel1'
           - os: macos-15-intel
             release: '14.3.Rel1'
           # macOS 14 runner is arm64 and is only available from 12.2.Rel1
